[gd_scene load_steps=3 format=3 uid="uid://c5gb1ad2kaxnb"]

[ext_resource type="Script" uid="uid://cjij4p07ncjps" path="res://scene/ui/game_over_panel_container.gd" id="1_ks12g"]

[sub_resource type="LabelSettings" id="LabelSettings_vrmev"]
font_size = 64
font_color = Color(0.99679, 9.62615e-08, 0.495365, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.501961)
shadow_offset = Vector2(8, 4)

[node name="GameOverPanelContainer" type="PanelContainer"]
process_mode = 3
custom_minimum_size = Vector2(800, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ks12g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "游戏结束"
label_settings = SubResource("LabelSettings_vrmev")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "重新开始"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "返回主菜单"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
